# teetime-finder

./: LICENSE  README.md  courses.live.example.json  courses.pohick.json  courses.real_sites.starter.json  courses.teeitup.fairfax.live.example.json  golfnow_facility_search_model.json  pyproject.toml
configs/: enterprise.json  fairfax.json  golfnow.model.json  live.json  mcg.json  starter.json  umd.json
src/tee_time_finder/: __init__.py  cli.py  config.py  curl_import.py  http_client.py  models.py  response_inference.py  service.py  utils.py  web.py
src/tee_time_finder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/tee_time_finder/providers/: __init__.py  base.py  chronogolf.py  html_regex.py  json_api.py  site_family.py  teeitup.py  tenfore.py
src/tee_time_finder/static/: app.css  app.js  index.html
tests/: test_config.py  test_curl_import.py  test_response_inference.py  test_service.py  test_web.py
