[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tee-time-finder"
version = "0.1.0"
description = "Extensible tee time aggregator for multiple booking providers"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Matthew Krinn" }]
dependencies = []

[project.scripts]
tee-time-finder = "tee_time_finder.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
